# first-fast-api

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 0fa5c8bb3db5_statistic.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: statistic.py
app/core/: config.py
app/crud/: __init__.py  crud_statistic.py
app/db/: base.py
app/models/: statistic.py
app/schemas/: __init__.py  statistic.py
